Add province question and provincial benefit cards (#464)
* add new province question, route, template, locales

* validation

* move question to top

* update existing e2e tests

* add provincial benefit cards

* fix typo

* replace english string

* add benefit card header locale strings

* add benefit calc for provincial benefits

* remove federal

* open link in new tab

* fix typo

* update getBenefits unit test for provincial benefits

* handle provincial separately

* refactor to make it more testable

* french route province

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,6 +13,8 @@
   "Next": "Next",
   "Please correct the errors on the page": "Please correct the errors on the page",
   "Skip to main content": "Skip to main content",
+  "app.description": "Answer some questions to find which programs can help you.",
+  "app.metaImageAlt": "Screen shot of the Find financial help during COVID-19 start page",
   "app.phase": "ALPHA",
   "app.title": "Find financial help during COVID-19",
   "button.back": "Back",
@@ -60,6 +62,7 @@
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
   "form.oas": "Are you enrolled in the Old Age Security (OAS) pension?",
   "form.plans_for_school": "Are you planning to go to college or university in September 2020?",
+  "form.province": "Where do you live?",
   "form.reduced_income": "How much do you expect to earn before taxes per month now?",
   "form.rrif": "Do you have a Registered Retirement Income Fund (RRIF)?",
   "form.student_debt": "Do you have student loans you owe the government?",
@@ -90,6 +93,33 @@
   "plans_for_school.1": "Yes.",
   "plans_for_school.2": "No.",
   "plans_for_school.title": "Plans for school",
+  "province-ab.header": "Check with the Alberta government",
+  "province-bc.header": "Check with the British Columbia (BC) government",
+  "province-mb.header": "Check with the Manitoba government",
+  "province-nb.header": "Check with the New Brunswick government",
+  "province-nl.header": "Check with the Newfoundland and Labrador government",
+  "province-ns.header": "Check with the Nova Scotia government",
+  "province-nt.header": "Check with the Northwest Territories government",
+  "province-nu.header": "Check with the Nunavut government",
+  "province-on.header": "Check with the Ontario government",
+  "province-pe.header": "Check with the Prince Edward Island (PEI) government",
+  "province-qc.header": "Check with the Quebec government",
+  "province-sk.header": "Check with the Saskatchewan government",
+  "province-yt.header": "Check with the Yukon government",
+  "province.ab": "Alberta.",
+  "province.bc": "British Columbia.",
+  "province.mb": "Manitoba.",
+  "province.nb": "New Brunswick.",
+  "province.nl": "Newfoundland and Labrador.",
+  "province.ns": "Nova Scotia.",
+  "province.nt": "Northwest Territories.",
+  "province.nu": "Nunavut.",
+  "province.on": "Ontario.",
+  "province.pe": "Prince Edward Island.",
+  "province.qc": "Quebec.",
+  "province.sk": "Saskatchewan.",
+  "province.title": "Your province or territory",
+  "province.yt": "Yukon.",
   "reduced_income.1": "$1,000 or less.",
   "reduced_income.2": "$1,001 or more.",
   "reduced_income.title": "Your reduced income",
@@ -115,7 +145,7 @@
   "start.business": "Own a business?",
   "start.businesslink.text": "Find support for your business.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=en",
-  "start.intro.2": "Answer some questions to find which federal programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
+  "start.intro.2": "Answer some questions to find which programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
   "start.intro.3": "<strong>New measures are still being announced</strong>, and we’re working to include them as quickly as possible.",
   "start.lastupdated": "Last updated",
   "start.submit": "Find help",
@@ -144,7 +174,5 @@
   "your_situation.unchanged_income.2": "You’re on paid leave.",
   "your_situation.unchanged_income.3": "You’re retired.",
   "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work.",
-  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021.",
-  "app.description": "Answer some questions to find which federal programs can help you.",
-  "app.metaImageAlt": "Screen shot of the Find financial help during COVID-19 start page"
+  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021."
 }
