--- a/locales/fr.json
+++ b/locales/fr.json
@@ -13,6 +13,8 @@
   "Next": "Continuer",
   "Please correct the errors on the page": "Veuillez corriger les erreurs trouvées dans la page",
   "Skip to main content": "Passer au contenu principal",
+  "app.description": "Répondez à quelques questions pour trouver quels programmes d’aide financière s’offrent à vous.",
+  "app.metaImageAlt": "Capture d’écran de la page de démarrage «Trouver de l’aide financière pendant la COVID-19»",
   "app.phase": "ALPHA",
   "app.title": "Trouver de l’aide financière pendant la COVID-19",
   "button.back": "Retour",
@@ -60,6 +62,7 @@
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
   "form.oas": "Recevez-vous la pension de la Sécurité de vieillesse (SV)?",
   "form.plans_for_school": "Planifiez vous poursuivre vos études postsecondaires en septembre 2020?",
+  "form.province": "Où habitez vous?",
   "form.reduced_income": "Combien de revenu avant impôts anticipez-vous recevoir à chaque mois à partir de maintenant?",
   "form.rrif": "Possédez vous un fond enregistré de revenu de retraite?",
   "form.student_debt": "Devez vous payer une dette d’étude au gouvernement?",
@@ -90,6 +93,33 @@
   "plans_for_school.1": "Oui.",
   "plans_for_school.2": "Non.",
   "plans_for_school.title": "Poursuivre vos études",
+  "province-ab.header": "Vérifiez auprès du gouvernement de l’Alberta",
+  "province-bc.header": "Vérifiez auprès du gouvernement de la Colombie-Britannique (C.-B.)",
+  "province-mb.header": "Vérifiez auprès du gouvernement du Manitoba",
+  "province-nb.header": "Vérifiez auprès du gouvernement du Nouveau-Brunswick",
+  "province-nl.header": "Vérifiez auprès du gouvernement de Terre-Neuve-et-Labrador",
+  "province-ns.header": "Vérifiez auprès du gouvernement de la Nouvelle-Écosse",
+  "province-nt.header": "Vérifiez auprès du gouvernement des Territoires du Nord-Ouest",
+  "province-nu.header": "Vérifiez auprès du gouvernement du Nunavut",
+  "province-on.header": "Vérifiez auprès du gouvernement de l’Ontario",
+  "province-pe.header": "Vérifiez auprès du gouvernement de l’Île-du-Prince-Édouard (Î.-P.-É.)",
+  "province-qc.header": "Vérifiez auprès du gouvernement du Québec",
+  "province-sk.header": "Vérifiez auprès du gouvernement de la Saskatchewan",
+  "province-yt.header": "Vérifiez auprès du gouvernement du Yukon",
+  "province.ab": "Alberta.",
+  "province.bc": "Colombie-Britannique.",
+  "province.mb": "Manitoba.",
+  "province.nb": "Nouveau-Brunswick.",
+  "province.nl": "Terre-Neuve-et-Labrador.",
+  "province.ns": "Nouvelle-Écosse.",
+  "province.nt": "Territoires du Nord-Ouest.",
+  "province.nu": "Nunavut.",
+  "province.on": "Ontario.",
+  "province.pe": "Île-du-Prince-Édouard.",
+  "province.qc": "Québec.",
+  "province.sk": "Saskatchewan.",
+  "province.title": "Votre province ou territoire",
+  "province.yt": "Yukon.",
   "reduced_income.1": "1000 $ ou moins.",
   "reduced_income.2": "1001 $ ou plus.",
   "reduced_income.title": "Votre revenu partiel",
@@ -115,7 +145,7 @@
   "start.business": "Vous êtes propriétaire d’entreprise?",
   "start.businesslink.text": "Trouvez du soutien pour votre entreprise.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=fr",
-  "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
+  "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
   "start.intro.3": "<strong>De nouvelles prestations sont constamment créées</strong> et nous travaillons à les inclure aussitôt que possible.",
   "start.lastupdated": "Dernière mise à jour le",
   "start.submit": "Trouver de l’aide",
@@ -144,7 +174,5 @@
   "your_situation.unchanged_income.2": "Vous êtes en congé payé.",
   "your_situation.unchanged_income.3": "Vous êtes retraité.",
   "your_situation.unchanged_income.4": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi.",
-  "your_situation.unchanged_income.5": "Vous obtiendrez un diplôme d’études secondaires pour l’année scolaire 2019-2020 et avez appliqué pour un programme d’études postsecondaires débutant avant le 1er février 2021.",
-  "app.description": "Répondez à quelques questions pour trouver quels programmes d’aide financière fédéraux s’offrent à vous.",
-  "app.metaImageAlt": "Capture d’écran de la page de démarrage «Trouver de l’aide financière pendant la COVID-19»"
+  "your_situation.unchanged_income.5": "Vous obtiendrez un diplôme d’études secondaires pour l’année scolaire 2019-2020 et avez appliqué pour un programme d’études postsecondaires débutant avant le 1er février 2021."
 }
