Adding new text to start page
Split out the existing 2nd Paragraph to have a header and text instead
of styling using strong
Updated with new text as per figma changes

Resolves #469

--- a/locales/en.json
+++ b/locales/en.json
@@ -145,9 +145,10 @@
   "start.business": "Own a business?",
   "start.businesslink.text": "Find support for your business.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=en",
-  "start.intro.2": "Answer some questions to find which programs can help you. We cannot guarantee your eligibility, but we can point you to the program details.",
-  "start.intro.3": "<strong>New measures are still being announced</strong>, and we’re working to include them as quickly as possible.",
+  "start.intro.2": "Answer some questions to find financial help. We cannot guarantee your eligibility, but we can point you to the program details.",
+  "start.intro.3": "We’re keeping up with new announcements and adding  programs to help more people. You may want to come back again.",
   "start.lastupdated": "Last updated",
+  "start.subheader": "More benefits being added",
   "start.submit": "Find help",
   "start.title": "Find financial help during COVID-19",
   "start_over": "Start over",
