--- a/locales/fr.json
+++ b/locales/fr.json
@@ -145,9 +145,10 @@
   "start.business": "Vous êtes propriétaire d’entreprise?",
   "start.businesslink.text": "Trouvez du soutien pour votre entreprise.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=fr",
-  "start.intro.2": "Répondez à quelques questions pour trouver quels programmes d’aide financière s’offrent à vous. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
-  "start.intro.3": "<strong>De nouvelles prestations sont constamment créées</strong> et nous travaillons à les inclure aussitôt que possible.",
+  "start.intro.2": "Répondez à quelques questions pour trouver de l’aide financière. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
+  "start.intro.3": "Nous suivons les nouvelles annonces et nous travaillons à inclure des programmes pour  aider davantage de personnes. Vous pourriez vouloir revenir consulter cet outil périodiquement.",
   "start.lastupdated": "Dernière mise à jour le",
+  "start.subheader": "D’autres prestations s’ajoutent",
   "start.submit": "Trouver de l’aide",
   "start.title": "Trouver de l’aide financière pendant la COVID-19",
   "start_over": "Recommencer",
