--- a/locales/en.json
+++ b/locales/en.json
@@ -127,7 +127,9 @@
   "required": "(required)",
   "results.banner": "You missed a couple questions at the beginning. <a href='/clear'>Start over</a> to get your full results.",
   "results.eligibility_warning": "These results <strong>do not guarantee your eligibility</strong>. Read the details we link to before applying.",
+  "results.header": "COVID-19 benefits",
   "results.header_text": "Based on what you’ve told us, the following help is available:",
+  "results.results": "results",
   "results.no_results.preamble": "Your situation does not match any of the benefits included here at the moment. We’re working to add more programs, so you may want to check back in the future or if your situation changes.",
   "results.other_potential_help": "Other potential help",
   "results.other_potential_help.preamble": "The following help is available as well:",
