--- a/locales/fr.json
+++ b/locales/fr.json
@@ -127,6 +127,8 @@
   "required": "(obligatoire)",
   "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
   "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
+  "results.results": "résultats",
+  "results.header": "COVID-19 benefits",
   "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
   "results.no_results.preamble": "Aucune prestation actuelle ne s’applique à votre situation. Nous ajoutons les prestations au fur et à mesure qu’elles sont annoncées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil plus tard, ou si votre situation change.",
   "results.other_potential_help": "Aide supplémentaire disponible",
