Update EN start content

--- a/locales/en.json
+++ b/locales/en.json
@@ -146,7 +146,7 @@
   "start.businesslink.text": "Find support for your business.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=en",
   "start.intro.2": "Answer some questions to find financial help. We cannot guarantee your eligibility, but we can point you to the program details.",
-  "start.intro.3": "We’re keeping up with new announcements and adding  programs to help more people. You may want to come back again.",
+  "start.intro.3": "You may want to keep checking back for updates.",
   "start.lastupdated": "Last updated",
   "start.subheader": "More benefits being added",
   "start.submit": "Find help",
