Update start page content #477

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -146,7 +146,7 @@
   "start.businesslink.text": "Trouvez du soutien pour votre entreprise.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=fr",
   "start.intro.2": "Répondez à quelques questions pour trouver de l’aide financière. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
-  "start.intro.3": "Nous suivons les nouvelles annonces et nous travaillons à inclure des programmes pour  aider davantage de personnes. Vous pourriez vouloir revenir consulter cet outil périodiquement.",
+  "start.intro.3": "Vous pourriez vouloir revenir consulter cet outil périodiquement.",
   "start.lastupdated": "Dernière mise à jour le",
   "start.subheader": "D’autres prestations s’ajoutent",
   "start.submit": "Trouver de l’aide",
