changes to OAS question/options

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -60,7 +60,7 @@
   "form.gross_income": "Quel est votre revenu total (avant impôts) en 2019 ou des 12 dernier mois ?",
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
-  "form.oas": "Recevez-vous la pension de la Sécurité de vieillesse (SV)?",
+  "form.oas": "Recevez-vous l’une de ces pensions?",
   "form.plans_for_school": "Planifiez vous poursuivre vos études postsecondaires en septembre 2020?",
   "form.province": "Où habitez vous?",
   "form.reduced_income": "Combien de revenu avant impôts anticipez-vous recevoir à chaque mois à partir de maintenant?",
@@ -84,10 +84,12 @@
   "mortgage_payments.3": "Non, vous n’êtes pas inquiet en ce moment.",
   "mortgage_payments.title": "Votre logement",
   "no_income.title": "Votre situation",
-  "oas.1": "Oui.",
-  "oas.2": "Non.",
-  "oas.3": "Vous n’êtes pas certain.",
+  "oas.1": "Pension de la sécurité de la vieillesse.",
+  "oas.2": "L’Allocation.",
+  "oas.3": "Allocation au survivant.",
+  "oas.4": "Vous ne recevez aucune de ces pensions.",
   "oas.header": "Plus d’argent pour les aînés",
+  "oas.hint": "Les détails de la <a href=\"https://www.canada.ca/fr/services/prestations/pensionspubliques/rpc/securite-vieillesse.html\">Pension de la sécurité de la vieillesse</a> sont disponibles.",
   "oas.title": "Pension de la Sécurité de vieillesse",
   "phase.desc": "Ce site évoluera au fur et à mesure que nous testons des idées.",
   "plans_for_school.1": "Oui.",
