--- a/locales/en.json
+++ b/locales/en.json
@@ -60,7 +60,7 @@
   "form.gross_income": "How much total income before taxes did you earn from paid work in 2019 or the last 12 months?",
   "form.lost_job": "Choose the description that best fits your situation.",
   "form.mortgage_payments": "Are you worried about making mortgage or rent payments?",
-  "form.oas": "Are you enrolled in the Old Age Security (OAS) pension?",
+  "form.oas": "Are you receiving any of the following pensions?",
   "form.plans_for_school": "Are you planning to go to college or university in September 2020?",
   "form.province": "Where do you live?",
   "form.reduced_income": "How much do you expect to earn before taxes per month now?",
@@ -84,9 +84,10 @@
   "mortgage_payments.3": "No, you’re not worried at this time.",
   "mortgage_payments.title": "Your housing",
   "no_income.title": "Your situation",
-  "oas.1": "Yes.",
-  "oas.2": "No.",
-  "oas.3": "You're not sure.",
+  "oas.1": "Old Age Security.",
+  "oas.2": "The Allowance.",
+  "oas.3": "Allowance for the Survivor.",
+  "oas.4": "You’re not receiving any of these.",
   "oas.header": "More money for seniors",
   "oas.title": "Old Age Security",
   "phase.desc": "This site will change as we test ideas.",
@@ -146,7 +147,7 @@
   "start.businesslink.text": "Find support for your business.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=en",
   "start.intro.2": "Answer some questions to find financial help. We cannot guarantee your eligibility, but we can point you to the program details.",
-  "start.intro.3": "We’re keeping up with new announcements and adding  programs to help more people. You may want to come back again.",
+  "start.intro.3": "You may want to keep checking back for updates.",
   "start.lastupdated": "Last updated",
   "start.subheader": "More benefits being added",
   "start.submit": "Find help",
@@ -175,5 +176,6 @@
   "your_situation.unchanged_income.2": "You’re on paid leave.",
   "your_situation.unchanged_income.3": "You’re retired.",
   "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work.",
-  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021."
+  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021.",
+  "oas.hint": "Information about <a href=\"https://www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security.html\" target=\"_blank\">Old Age Security and related benefits</a> is available."
 }
