--- a/locales/fr.json
+++ b/locales/fr.json
@@ -61,11 +61,11 @@
   "form.lost_job": "Choisissez la situation qui vous décrit le mieux",
   "form.mortgage_payments": "Avez-vous des inquiétudes au sujet de vos paiements d’hypothèque ou de loyer?",
   "form.oas": "Recevez-vous l’une de ces pensions?",
-  "form.plans_for_school": "Planifiez vous poursuivre vos études postsecondaires en septembre 2020?",
-  "form.province": "Où habitez vous?",
+  "form.plans_for_school": "Planifiez-vous poursuivre vos études postsecondaires en septembre 2020?",
+  "form.province": "Où habitez-vous?",
   "form.reduced_income": "Combien de revenu avant impôts anticipez-vous recevoir à chaque mois à partir de maintenant?",
-  "form.rrif": "Possédez vous un fond enregistré de revenu de retraite?",
-  "form.student_debt": "Devez vous payer une dette d’étude au gouvernement?",
+  "form.rrif": "Possédez-vous un fond enregistré de revenu de retraite?",
+  "form.student_debt": "Devez-vous payer une dette d’étude au gouvernement?",
   "form.your_situation.no_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.some_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.unchanged_income": "Choisissez la situation qui vous décrit le mieux.",
