--- a/locales/en.json
+++ b/locales/en.json
@@ -89,6 +89,7 @@
   "oas.3": "Allowance for the Survivor.",
   "oas.4": "You’re not receiving any of these.",
   "oas.header": "More money for seniors",
+  "oas.hint": "Information about <a href=\"https://www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security.html\" target=\"_blank\">Old Age Security and related benefits</a> is available.",
   "oas.title": "Old Age Security",
   "phase.desc": "This site will change as we test ideas.",
   "plans_for_school.1": "Yes.",
@@ -126,14 +127,17 @@
   "reduced_income.title": "Your reduced income",
   "rent_help.header": "In most provinces and territories, you cannot be evicted for not paying rent",
   "required": "(required)",
+  "results.about": "about",
   "results.banner": "You missed a couple questions at the beginning. <a href='/clear'>Start over</a> to get your full results.",
   "results.eligibility_warning": "These results <strong>do not guarantee your eligibility</strong>. Read the details we link to before applying.",
   "results.header": "COVID-19 benefits",
   "results.header_text": "Based on what you’ve told us, the following help is available:",
-  "results.results": "results",
+  "results.less_info": "Less info",
+  "results.more_info": "More info",
   "results.no_results.preamble": "Your situation does not match any of the benefits included here at the moment. We’re working to add more programs, so you may want to check back in the future or if your situation changes.",
   "results.other_potential_help": "Other potential help",
   "results.other_potential_help.preamble": "The following help is available as well:",
+  "results.results": "results",
   "results.situation_changes": "If your situation changes, you can answer the questions again to get new programs.",
   "results_title": {
     "one": "Results",
@@ -178,6 +182,5 @@
   "your_situation.unchanged_income.2": "You’re on paid leave.",
   "your_situation.unchanged_income.3": "You’re retired.",
   "your_situation.unchanged_income.4": "You were a college or university student during the 2019-20 school year and now cannot find work.",
-  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021.",
-  "oas.hint": "Information about <a href=\"https://www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security.html\" target=\"_blank\">Old Age Security and related benefits</a> is available."
+  "your_situation.unchanged_income.5": "You’re graduating high school in the 2019-20 school year and have applied for post-secondary education that will start before February 1, 2021."
 }
