--- a/locales/en.json
+++ b/locales/en.json
@@ -139,6 +139,9 @@
   "results.other_potential_help.preamble": "The following help is available as well:",
   "results.results": "results",
   "results.situation_changes": "If your situation changes, you can answer the questions again to get new programs.",
+  "results.unavailable_benefits_preamble": "Based on what you told us, the following options do not fit your situation.",
+  "results.unavailable_close_link": "Close list of benefits not relevant for you",
+  "results.unavailable_view_link": "Open list of benefits not relevant for you",
   "results_title": {
     "one": "Results",
     "other": "%s results"
