changed section title

--- a/locales/en.json
+++ b/locales/en.json
@@ -135,6 +135,7 @@
   "results.less_info": "Less info",
   "results.more_info": "More info",
   "results.no_results.preamble": "Your situation does not match any of the benefits included here at the moment. We’re working to add more programs, so you may want to check back in the future or if your situation changes.",
+  "results.not_for_you": "Not for you",
   "results.other_potential_help": "Other potential help",
   "results.other_potential_help.preamble": "The following help is available as well:",
   "results.results": "results",
