--- a/locales/fr.json
+++ b/locales/fr.json
@@ -135,6 +135,7 @@
   "results.less_info": "Moin d'infos",
   "results.more_info": "Plus d'infos",
   "results.no_results.preamble": "Aucune prestation actuelle ne s’applique à votre situation. Nous ajoutons les prestations au fur et à mesure qu’elles sont annoncées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil plus tard, ou si votre situation change.",
+  "results.not_for_you": "Not for you",
   "results.other_potential_help": "Aide supplémentaire disponible",
   "results.other_potential_help.preamble": "L’aide suivante est également disponible :",
   "results.results": "résultats",
