--- a/locales/fr.json
+++ b/locales/fr.json
@@ -45,7 +45,9 @@
   "feedback.5": "Je m’inquiète de la manière dont mes renseignements pourraient être utilisés.",
   "feedback.6": "Autre",
   "feedback.button": "Signaler un problème ou une erreur sur cette page",
-  "feedback.personal_warning": "N’incluez aucune information personnelle ou financière.",
+  "feedback.help_link_text": "Besoin d'aide avec votre demande?",
+  "feedback.help_link_url": "https://www.canada.ca/fr/contact/communiquez-avec-1-800-o-canada.html",
+  "feedback.personal_warning": "<strong>N’incluez aucune information</strong> personnelle ou financière. Nous utilisons cette information afin d’améliorer le service, mais <strong>nous ne vous répondrons pas.</strong>",
   "feedback.question": "Cochez tous les problèmes qui s’appliquent.",
   "feedback.submit": "Soumettre",
   "feedback.tell_us_more": "Pouvez-vous décrire le problème?",
