--- a/locales/fr.json
+++ b/locales/fr.json
@@ -45,6 +45,7 @@
   "feedback.5": "Je m’inquiète de la manière dont mes renseignements pourraient être utilisés.",
   "feedback.6": "Autre",
   "feedback.button": "Signaler un problème ou une erreur sur cette page",
+  "feedback.dont_know": "Vous ne savez pas où demander de l’aide",
   "feedback.help_link_text": "Besoin d'aide avec votre demande?",
   "feedback.help_link_url": "https://www.canada.ca/fr/contact/communiquez-avec-1-800-o-canada.html",
   "feedback.personal_warning": "<strong>N’incluez aucune information</strong> personnelle ou financière. Nous utilisons cette information afin d’améliorer le service, mais <strong>nous ne vous répondrons pas.</strong>",
