#major Redesigned Results Page (#478)
* Humble beginnings for the new results page
changed the markup accordingly in CESB (minus some needed SVGS)
setup a blank js file for the accordions with some todos

* use tailwind @apply syntax

* move more tailwind styles out using @apply

* move list styles out using tailwind @apply

* remove extra list styles that had no effect

* improved spacing around benefitli

* move some more styles to tailwind @apply for simpler benefits cards

* fix typo and use new featured list class

* add padding to bottom of benefits

* add container element for show/hide

* remove tabindex and unnecessary var

* get basic show more/less functionality going

* dynamically generate benefit list

* localize $

* add keyboard navigation help

* move out to helper file

* add localization

* add plus/minus imgs

* move i18n function to separate js file so it can be used elsewhere

* demote all headings

* cleanup a bit

* add toggle for outer benefits list

* add underline to text

* fix button alignment/text

* move strings out to locale files

* update colors to use custom tailwind colors

* don't return GST in unavailable

* changed section title

* add x-padding to benefits card containers

* add spacing between major sections

* improvements to heading sizes

* tighten up spacing between headings/sections

* add max-width to benefits lists for readability

* don't display if no benefits, add some spacing below alert

* update changelog

* remove fill=none on svg so it can be seen

* fix spacing below the start button

* get tests to passing after results screen changes

* refactor all benefit cards to use benefit template

* don't need all that js anymore, convert what's left to vanillajs

* update styles for new markup

* add a little space

* use a template for benefit cards

* add data-cy attribute

* check existence of elements first

* bust some ca

--- a/locales/en.json
+++ b/locales/en.json
@@ -130,13 +130,22 @@
   "reduced_income.title": "Your reduced income",
   "rent_help.header": "In most provinces and territories, you cannot be evicted for not paying rent",
   "required": "(required)",
+  "results.about": "about",
   "results.banner": "You missed a couple questions at the beginning. <a href='/clear'>Start over</a> to get your full results.",
   "results.eligibility_warning": "These results <strong>do not guarantee your eligibility</strong>. Read the details we link to before applying.",
+  "results.header": "COVID-19 benefits",
   "results.header_text": "Based on what you’ve told us, the following help is available:",
+  "results.less_info": "Less info",
+  "results.more_info": "More info",
   "results.no_results.preamble": "Your situation does not match any of the benefits included here at the moment. We’re working to add more programs, so you may want to check back in the future or if your situation changes.",
+  "results.not_for_you": "Not for you",
   "results.other_potential_help": "Other potential help",
   "results.other_potential_help.preamble": "The following help is available as well:",
+  "results.results": "results",
   "results.situation_changes": "If your situation changes, you can answer the questions again to get new programs.",
+  "results.unavailable_benefits_preamble": "Based on what you told us, the following options do not fit your situation.",
+  "results.unavailable_close_link": "Close list of benefits not relevant for you",
+  "results.unavailable_view_link": "Open list of benefits not relevant for you",
   "results_title": {
     "one": "Results",
     "other": "%s results"
