--- a/locales/fr.json
+++ b/locales/fr.json
@@ -130,13 +130,22 @@
   "reduced_income.title": "Votre revenu partiel",
   "rent_help.header": "Dans la majorité des provinces et territoires, vous ne pouvez pas être expulsé pour ne pas avoir payé votre loyer",
   "required": "(obligatoire)",
+  "results.about": "sur",
   "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
   "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
+  "results.header": "COVID-19 benefits",
   "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
+  "results.less_info": "Moin d'infos",
+  "results.more_info": "Plus d'infos",
   "results.no_results.preamble": "Aucune prestation actuelle ne s’applique à votre situation. Nous ajoutons les prestations au fur et à mesure qu’elles sont annoncées et nous travaillons à les inclure aussitôt que possible. Revenez consulter cet outil plus tard, ou si votre situation change.",
+  "results.not_for_you": "Not for you",
   "results.other_potential_help": "Aide supplémentaire disponible",
   "results.other_potential_help.preamble": "L’aide suivante est également disponible :",
+  "results.results": "résultats",
   "results.situation_changes": "Si votre situation change, vous pouvez répondre aux questions à nouveau pour trouver de nouveaux programmes d’aide.",
+  "results.unavailable_benefits_preamble": "Based on what you told us, the following options do not fit your situation.",
+  "results.unavailable_close_link": "Close list of benefits not relevant for you",
+  "results.unavailable_view_link": "Open list of benefits not relevant for you",
   "results_title": {
     "one": "Résultats",
     "other": "%s résultats"
