--- a/locales/fr.json
+++ b/locales/fr.json
@@ -132,6 +132,7 @@
   "required": "(obligatoire)",
   "results.about": "sur",
   "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
+  "results.check_back": "Nous ajoutons régulièrement de nouvelles prestations. Nous vous encourageons à consulter cet outil périodiquement ou si votre situation change.",
   "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
   "results.header": "COVID-19 benefits",
   "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
@@ -142,7 +143,7 @@
   "results.other_potential_help": "Aide supplémentaire disponible",
   "results.other_potential_help.preamble": "L’aide suivante est également disponible :",
   "results.results": "résultats",
-  "results.situation_changes": "Si votre situation change, vous pouvez répondre aux questions à nouveau pour trouver de nouveaux programmes d’aide.",
+  "results.situation_changes": false,
   "results.unavailable_benefits_preamble": "Based on what you told us, the following options do not fit your situation.",
   "results.unavailable_close_link": "Close list of benefits not relevant for you",
   "results.unavailable_view_link": "Open list of benefits not relevant for you",
@@ -159,11 +160,12 @@
   "start.business": "Vous êtes propriétaire d’entreprise?",
   "start.businesslink.text": "Trouvez du soutien pour votre entreprise.",
   "start.businesslink.url": "https://innovation.ised-isde.canada.ca/s/?language=fr",
-  "start.intro.2": "Répondez à quelques questions pour trouver de l’aide financière. Nous ne pouvons garantir votre admissibilité, mais nous pouvons vous aider à mieux comprendre leurs particularités.",
-  "start.intro.3": "Vous pourriez vouloir revenir consulter cet outil périodiquement.",
+  "start.enable_cookies_body": "Vous semblez avoir désactivé les témoins. Ce service utilise les témoins afin d’afficher vos résultats. Vous ne pourrez recevoir de résultats sans activer les témoins.",
+  "start.enable_cookies_title": "Activez les témoins pour utiliser ce service",
+  "start.intro.2": "Ici, nous vous demanderons entre 7 et 10 questions, une à la fois.",
+  "start.intro.3": "Ensuite nous vous montrerons une liste de prestations qui pourraient vous aider. Des liens vers davantage d’information vous seront donnés.",
   "start.lastupdated": "Dernière mise à jour le",
-  "start.subheader": "D’autres prestations s’ajoutent",
-  "start.submit": "Trouver de l’aide",
+  "start.submit": "Commencer",
   "start.title": "Trouver de l’aide financière pendant la COVID-19",
   "start_over": "Recommencer",
   "student_debt.1": "Oui.",
@@ -192,7 +194,5 @@
   "your_situation.unchanged_income.3": "Vous êtes retraité.",
   "your_situation.unchanged_income.4": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi.",
   "your_situation.unchanged_income.5": "Vous obtiendrez un diplôme d’études secondaires pour l’année scolaire 2019-2020 et avez appliqué pour un programme d’études postsecondaires débutant avant le 1er février 2021.",
-  "your_situation.unchanged_income.none": "Aucune de ces options.",
-  "start.enable_cookies_title": "Activez les témoins pour utiliser ce service",
-  "start.enable_cookies_body": "Vous semblez avoir désactivé les témoins. Ce service utilise les témoins afin d’afficher vos résultats. Vous ne pourrez recevoir de résultats sans activer les témoins."
+  "your_situation.unchanged_income.none": "Aucune de ces options."
 }
