--- a/locales/en.json
+++ b/locales/en.json
@@ -36,6 +36,7 @@
   "error-link.text": "Find financial help during COVID-19",
   "errors.multipleChoiceGeneric": "You must select one of the options listed below",
   "feedback": "Feedback",
+  "feedback-error.title": "Error",
   "feedback-thanks.text": "Thank you for your feedback.",
   "feedback-thanks.title": "Thanks!",
   "feedback.1": "Incorrect information",
@@ -46,6 +47,7 @@
   "feedback.6": "Other",
   "feedback.button": "Report a problem or mistake on this page",
   "feedback.dont_know": "You don’t know where else to go for help.",
+  "feedback.error": "You need to tell us something about the problem before you can submit.",
   "feedback.help_link_text": "Need help with your application?",
   "feedback.help_link_url": "https://www.canada.ca/en/contact/contact-1-800-o-canada.html",
   "feedback.personal_warning": "<strong>Do not include</strong> your personal or financial details. We use this information to improve this service, but <strong>we do not reply.</strong>",
