--- a/locales/fr.json
+++ b/locales/fr.json
@@ -36,6 +36,7 @@
   "error-link.text": "Trouver de l’aide financière pendant la COVID-19",
   "errors.multipleChoiceGeneric": "Vous devez choisir une option ci-dessous",
   "feedback": "Feedback",
+  "feedback-error.title": "Erreur",
   "feedback-thanks.text": "Merci de nous avoir aidés à améliorer le service!",
   "feedback-thanks.title": "Merci!",
   "feedback.1": "L’information sur cette page est incorrecte",
@@ -46,6 +47,7 @@
   "feedback.6": "Autre",
   "feedback.button": "Signaler un problème ou une erreur sur cette page",
   "feedback.dont_know": "Vous ne savez pas où demander de l’aide",
+  "feedback.error": "Vous devez nous fournir un problème avant de soumettre ce formulaire.",
   "feedback.help_link_text": "Besoin d'aide avec votre demande?",
   "feedback.help_link_url": "https://www.canada.ca/fr/contact/communiquez-avec-1-800-o-canada.html",
   "feedback.personal_warning": "<strong>N’incluez aucune information</strong> personnelle ou financière. Nous utilisons cette information afin d’améliorer le service, mais <strong>nous ne vous répondrons pas.</strong>",
