--- a/locales/fr.json
+++ b/locales/fr.json
@@ -182,8 +182,8 @@
   "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
   "your_situation.no_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
   "your_situation.no_income.5": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
-  "your_situation.no_income.6": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi.",
-  "your_situation.no_income.7": "Vous receviez l’assurance-emploi ou la prestations de pêcheur et votre prestation s’est terminée le 29&nbsp;décembre&nbsp;2019 ou plus tard.",
+  "your_situation.no_income.6": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez pas trouver d’emploi.",
+  "your_situation.no_income.7": "Vous receviez des prestations régulières d’assurance-emploi ou de pêcheur, et vos prestations ont cessé le 29&nbsp;décembre&nbsp2019 ou plus tard.",
   "your_situation.no_income.none": "Aucune de ces options.",
   "your_situation.some_income.1": "Votre employeur a réduit votre horaire de travail en raison de la COVID-19.",
   "your_situation.some_income.2": "Vous avez perdu un ou deux de vos emplois à temps partiel, mais avez toujours un revenu additionnel.",
