--- a/locales/fr.json
+++ b/locales/fr.json
@@ -70,7 +70,7 @@
   "form.province": "Où habitez-vous?",
   "form.reduced_income": "Combien de revenu avant impôts anticipez-vous recevoir à chaque mois à partir de maintenant?",
   "form.rrif": "Possédez-vous un fond enregistré de revenu de retraite?",
-  "form.student_debt": "Devez-vous payer une dette d’étude au gouvernement?",
+  "form.student_debt": "Devez-vous payer une dette d’études au gouvernement? ",
   "form.your_situation.no_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.some_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.unchanged_income": "Choisissez la situation qui vous décrit le mieux.",
