--- a/locales/fr.json
+++ b/locales/fr.json
@@ -135,8 +135,8 @@
   "results.about": "sur",
   "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
   "results.check_back": "Nous ajoutons régulièrement de nouvelles prestations. Nous vous encourageons à consulter cet outil périodiquement ou si votre situation change.",
-  "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
-  "results.header": "COVID-19 benefits",
+  "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant de faire une demande.",
+  "results.header": "Prestations pour la COVID-19",
   "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
   "results.less_info": "Moin d'infos",
   "results.more_info": "Plus d'infos",
