--- a/locales/en.json
+++ b/locales/en.json
@@ -92,7 +92,7 @@
   "oas.1": "Old Age Security.",
   "oas.2": "The Allowance.",
   "oas.3": "Allowance for the Survivor.",
-  "oas.4": "You’re not receiving any of these.",
+  "oas.4": "No, you’re not receiving any of these.",
   "oas.header": "More money for seniors",
   "oas.hint": "Information about <a href=\"https://www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security.html\" target=\"_blank\">Old Age Security and related benefits</a> is available.",
   "oas.title": "Old Age Security",
