--- a/locales/fr.json
+++ b/locales/fr.json
@@ -92,7 +92,7 @@
   "oas.1": "Pension de la sécurité de la vieillesse.",
   "oas.2": "L’Allocation.",
   "oas.3": "Allocation au survivant.",
-  "oas.4": "Vous ne recevez aucune de ces pensions.",
+  "oas.4": "Non, vous ne recevez aucune de ces pensions.",
   "oas.header": "Plus d’argent pour les aînés",
   "oas.hint": "Les détails de la <a href=\"https://www.canada.ca/fr/services/prestations/pensionspubliques/rpc/securite-vieillesse.html\" target=\"_blank\">Pension de la sécurité de la vieillesse</a> sont disponibles.",
   "oas.title": "Pension de la Sécurité de vieillesse",
