--- a/locales/fr.json
+++ b/locales/fr.json
@@ -70,7 +70,7 @@
   "form.province": "Où habitez-vous?",
   "form.reduced_income": "Combien de revenu avant impôts anticipez-vous recevoir à chaque mois à partir de maintenant?",
   "form.rrif": "Possédez-vous un fond enregistré de revenu de retraite?",
-  "form.student_debt": "Devez-vous payer une dette d’étude au gouvernement?",
+  "form.student_debt": "Devez-vous payer une dette d’études au gouvernement? ",
   "form.your_situation.no_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.some_income": "Choisissez la situation qui vous décrit le mieux.",
   "form.your_situation.unchanged_income": "Choisissez la situation qui vous décrit le mieux.",
@@ -92,7 +92,7 @@
   "oas.1": "Pension de la sécurité de la vieillesse.",
   "oas.2": "L’Allocation.",
   "oas.3": "Allocation au survivant.",
-  "oas.4": "Vous ne recevez aucune de ces pensions.",
+  "oas.4": "Non, vous ne recevez aucune de ces pensions.",
   "oas.header": "Plus d’argent pour les aînés",
   "oas.hint": "Les détails de la <a href=\"https://www.canada.ca/fr/services/prestations/pensionspubliques/rpc/securite-vieillesse.html\" target=\"_blank\">Pension de la sécurité de la vieillesse</a> sont disponibles.",
   "oas.title": "Pension de la Sécurité de vieillesse",
@@ -135,8 +135,8 @@
   "results.about": "sur",
   "results.banner": "Vous n’avez pas répondu à quelques questions. <a href='/clear'>Recommencez</a> pour recevoir vos résultats complets.",
   "results.check_back": "Nous ajoutons régulièrement de nouvelles prestations. Nous vous encourageons à consulter cet outil périodiquement ou si votre situation change.",
-  "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant d’appliquer.",
-  "results.header": "COVID-19 benefits",
+  "results.eligibility_warning": "Ces résultats <strong>ne garantissent pas votre admissibilité</strong>. Lisez attentivement les détails avant de faire une demande.",
+  "results.header": "Prestations pour la COVID-19",
   "results.header_text": "Selon les informations que vous nous avez fournies, l’aide suivante est possible :",
   "results.less_info": "Moin d'infos",
   "results.more_info": "Plus d'infos",
@@ -182,8 +182,8 @@
   "your_situation.no_income.3": "Vous êtes en congé sans solde pour prendre soin d’un enfant ou d’un proche malade.",
   "your_situation.no_income.4": "Vous êtes en congé sans solde alors que vous êtes malade ou en quarantaine obligatoire.",
   "your_situation.no_income.5": "Vous étiez récemment en congé parental, mais ne pouvez pas retourner travailler en raison de la COVID-19.",
-  "your_situation.no_income.6": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez trouver un emploi.",
-  "your_situation.no_income.7": "Vous receviez l’assurance-emploi ou la prestations de pêcheur et votre prestation s’est terminée le 29&nbsp;décembre&nbsp;2019 ou plus tard.",
+  "your_situation.no_income.6": "Vous étiez étudiant dans une institution postsecondaire lors de l’année scolaire 2019-20 et ne pouvez pas trouver d’emploi.",
+  "your_situation.no_income.7": "Vous receviez des prestations régulières d’assurance-emploi ou de pêcheur, et vos prestations ont cessé le 29&nbsp;décembre&nbsp2019 ou plus tard.",
   "your_situation.no_income.none": "Aucune de ces options.",
   "your_situation.some_income.1": "Votre employeur a réduit votre horaire de travail en raison de la COVID-19.",
   "your_situation.some_income.2": "Vous avez perdu un ou deux de vos emplois à temps partiel, mais avez toujours un revenu additionnel.",
